# clim

./: .gitignore  CMakeLists.txt  README.md
include/: clim_args_parser.h  clim_banner.h  clim_base.h  clim_err_handle.h  clim_filesystem.h  clim_filesystem_types.h  clim_img.h  clim_img_bitmap.h  clim_img_blur.h  clim_img_utils.h  clim_logger.h  clim_mem.h  clim_platform_detector.h  clim_utils.h  clim_win_utils.h
src/: clim_img.c  clim_img_utils.c  clim_logger.c  clim_main.c  clim_mem.c  clim_utils.c
tests/: clim_test_base.h  clim_test_filesystem.h  clim_test_main.c
